// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tab-web-platform shared/Tabs Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        aria-orientation="horizontal"
        class="-mb-px flex space-x-2"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="true"
          class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="0"
          type="button"
        >
          First tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Second tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Third tab
        </button>
      </div>
      <div>
        <div
          aria-labelledby="headlessui-tabs-tab-mock-id"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          tabindex="0"
        >
          <div
            style="margin-top: 25px;"
          >
            Tab 1 content
          </div>
        </div>
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-orientation="horizontal"
      class="-mb-px flex space-x-2"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="true"
        class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="0"
        type="button"
      >
        First tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Second tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Third tab
      </button>
    </div>
    <div>
      <div
        aria-labelledby="headlessui-tabs-tab-mock-id"
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        tabindex="0"
      >
        <div
          style="margin-top: 25px;"
        >
          Tab 1 content
        </div>
      </div>
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/Tabs With Bottom Divider 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        aria-orientation="horizontal"
        class="-mb-px flex space-x-2 border-b border-gray-2"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="true"
          class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="0"
          type="button"
        >
          First tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Second tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Third tab
        </button>
      </div>
      <div>
        <div
          aria-labelledby="headlessui-tabs-tab-mock-id"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          tabindex="0"
        >
          <div
            style="margin-top: 25px;"
          >
            Tab 1 content
          </div>
        </div>
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-orientation="horizontal"
      class="-mb-px flex space-x-2 border-b border-gray-2"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="true"
        class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="0"
        type="button"
      >
        First tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Second tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Third tab
      </button>
    </div>
    <div>
      <div
        aria-labelledby="headlessui-tabs-tab-mock-id"
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        tabindex="0"
      >
        <div
          style="margin-top: 25px;"
        >
          Tab 1 content
        </div>
      </div>
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/Tabs With Scrollable Panels 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        aria-orientation="horizontal"
        class="-mb-px flex space-x-2"
        role="tablist"
      >
        <button
          aria-selected="true"
          class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="0"
          type="button"
        >
          First tab
        </button>
        <button
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Second tab
        </button>
        <button
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Third tab
        </button>
      </div>
      <div
        class="bg-yellow-4 flex items-center justify-center"
        data-scrollable-id="tab-1-content"
        style="height: 70vh;"
      >
        Tab 1 content
      </div>
      <div
        class="bg-gray-6 flex items-center justify-center"
        data-scrollable-id="tab-2-content"
        style="height: 70vh;"
      >
        Tab 2 content
      </div>
      <div
        class="bg-green-4 flex items-center justify-center"
        data-scrollable-id="tab-3-content"
        style="height: 70vh;"
      >
        Tab 3 content
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-orientation="horizontal"
      class="-mb-px flex space-x-2"
      role="tablist"
    >
      <button
        aria-selected="true"
        class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="0"
        type="button"
      >
        First tab
      </button>
      <button
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Second tab
      </button>
      <button
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Third tab
      </button>
    </div>
    <div
      class="bg-yellow-4 flex items-center justify-center"
      data-scrollable-id="tab-1-content"
      style="height: 70vh;"
    >
      Tab 1 content
    </div>
    <div
      class="bg-gray-6 flex items-center justify-center"
      data-scrollable-id="tab-2-content"
      style="height: 70vh;"
    >
      Tab 2 content
    </div>
    <div
      class="bg-green-4 flex items-center justify-center"
      data-scrollable-id="tab-3-content"
      style="height: 70vh;"
    >
      Tab 3 content
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tab-web-platform shared/Tabs With Selected Tab Index 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    class="sb-show-nopreview"
  >
    <div>
      <div
        aria-orientation="horizontal"
        class="-mb-px flex space-x-2"
        role="tablist"
      >
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          First tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="true"
          class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state="selected"
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="0"
          type="button"
        >
          Second tab
        </button>
        <button
          aria-controls="headlessui-tabs-panel-mock-id"
          aria-selected="false"
          class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
          data-headlessui-state=""
          id="headlessui-tabs-tab-mock-id"
          role="tab"
          tabindex="-1"
          type="button"
        >
          Third tab
        </button>
      </div>
      <div>
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
        <div
          aria-labelledby="headlessui-tabs-tab-mock-id"
          data-headlessui-state="selected"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          tabindex="0"
        >
          <div
            style="margin-top: 25px;"
          >
            Tab 2 content
          </div>
        </div>
        <span
          aria-labelledby="headlessui-tabs-tab-mock-id"
          id="headlessui-tabs-panel-mock-id"
          role="tabpanel"
          style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
          tabindex="-1"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-orientation="horizontal"
      class="-mb-px flex space-x-2"
      role="tablist"
    >
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        First tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="true"
        class="border-blue-0 text-dark-primary whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state="selected"
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="0"
        type="button"
      >
        Second tab
      </button>
      <button
        aria-controls="headlessui-tabs-panel-mock-id"
        aria-selected="false"
        class="border-transparent text-dark-tertiary hover:text-gray-7 hover:border-gray-3 whitespace-nowrap py-4 px-8 border-b-2 font-bold text-sm"
        data-headlessui-state=""
        id="headlessui-tabs-tab-mock-id"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Third tab
      </button>
    </div>
    <div>
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
      <div
        aria-labelledby="headlessui-tabs-tab-mock-id"
        data-headlessui-state="selected"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        tabindex="0"
      >
        <div
          style="margin-top: 25px;"
        >
          Tab 2 content
        </div>
      </div>
      <span
        aria-labelledby="headlessui-tabs-tab-mock-id"
        id="headlessui-tabs-panel-mock-id"
        role="tabpanel"
        style="position: fixed; top: 1px; left: 1px; width: 1px; height: 0px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border-width: 0px;"
        tabindex="-1"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
